v0.0.1/modules/schema/pages/class/AcceptanceTest.adoc
= `AcceptanceTest`
:toclevels: 4


+++Acceptance test for assets.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:AcceptanceTest`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`AcceptanceTest`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<dateTime,`dateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time the asset was last tested using the 'type' of test and yielding the current status in 'success' attribute.+++

| <<success,`success`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if asset has passed acceptance test and may be placed in or is in service. It is set to false if asset is removed from service and is required to be tested again before being placed back in service, possibly in a new location. Since asset may go through multiple tests during its lifecycle, the date of each acceptance test may be recorded in 'Asset.ActivityRecord.status.dateTime'.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Type of test or group of tests that was conducted on 'dateTime'.+++
|===

'''


//[discrete]
[#dateTime]
=== `dateTime`
+++Date and time the asset was last tested using the 'type' of test and yielding the current status in 'success' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AcceptanceTest.dateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#success]
=== `success`
+++True if asset has passed acceptance test and may be placed in or is in service. It is set to false if asset is removed from service and is required to be tested again before being placed back in service, possibly in a new location. Since asset may go through multiple tests during its lifecycle, the date of each acceptance test may be recorded in 'Asset.ActivityRecord.status.dateTime'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AcceptanceTest.success`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#type]
=== `type`
+++Type of test or group of tests that was conducted on 'dateTime'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AcceptanceTest.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


